# oura-ring-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  oura-mcp-spec.md  pyproject.toml
examples/: analysis-notebook.ipynb  claude-config.json
src/oura_mcp/: _errors.py  auth.py  client.py  server.py
src/oura_mcp/tools/: compaction.py  derived.py  direct.py
src/oura_ring_mcp/: _dates.py  _errors.py  cache.py  server.py
src/oura_ring_mcp/tools/: direct.py
tests/: test_auth.py  test_cache.py  test_client.py  test_compaction.py  test_dates.py  test_derived.py  test_direct_daily.py  test_direct_remaining.py  test_errors.py  test_overnight_filter.py
tests/fixtures/: sleep_response.json
